// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search tests availability tests searchAvailabilityForItinerary - bookable - static with inventory 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [],
      "agentPrice": 54900,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Superior Room, 1 King Bed (Room Only)",
      "puInfoList": Array [],
      "rateId": "$NZD9704dbc4eaf60700,4,DOUB,C5 A1INF KGB DOUB RONL",
      "startTimes": Array [],
      "totalPrice": 54900,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 54900,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Accessible Superior Room, 1 King Bed (Room Only)",
      "puInfoList": Array [],
      "rateId": "$NZDb5354be1c55abc98,4,DOUB,C5 A1INF KGBH DOUB RONL",
      "startTimes": Array [],
      "totalPrice": 54900,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 58600,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Accessible Superior Room, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD454c5fffb6a75a39,4,DOUB,C5 B1INF KGBH DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 58600,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 58600,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Superior Room, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD934d94ec15053710,4,DOUB,C5 B1INF KGB DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 58600,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 61800,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Luxury Atrium View Room, 1 King Bed (Room Only)",
      "puInfoList": Array [],
      "rateId": "$NZDdf6f8ddcab337053,4,DOUB,C5 A1INF KGA DOUB RONL",
      "startTimes": Array [],
      "totalPrice": 61800,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 65100,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Luxury Room With Balcony, 1 King Bed (Room Only)",
      "puInfoList": Array [],
      "rateId": "$NZDcf5fef11d058f610,4,DOUB,C5 A1INF KGAEF DOUB RONL",
      "startTimes": Array [],
      "totalPrice": 65100,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 65600,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Luxury Atrium View Room, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD3335992e690e5452,4,DOUB,C5 B1INF KGA DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 65600,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 68800,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Luxury Room With Balcony, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD65ae38b5586b6211,4,DOUB,C5 B1INF KGAEF DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 68800,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 83700,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Luxury Room, Club Millésime Access, 1 King Bed, Marina View (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD1ab26e031623ffae,4,DOUB,C5 B1INF KGAOS DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 83700,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 88400,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Junior Suite, Club Millésime Access, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD58b063a021d71ea3,4,DOUB,C5 B1INF SKD DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 88400,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 97700,
      "cancelHours": "",
      "cancelPolicies": Array [],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Deluxe Suite, Club Millésime Access, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD48493f27a57b8c65,4,DOUB,C5 B1INF SKB DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 97700,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests searchItineraries 1`] = `
Object {
  "bookings": Array [
    Object {
      "agentRef": "2356674/1",
      "bookingId": "316559",
      "bookingStatus": "Quotation",
      "canEdit": true,
      "currency": "GBP",
      "enteredDate": "2024-09-12",
      "name": "2356674/1 Sean Conta",
      "ref": "ALFI393706",
      "serviceLines": Array [
        Object {
          "linePrice": "187795",
          "optionId": "LONHOSANLONBFBDLX",
          "optionName": "Bed and Full Buffet Breakfast",
          "paxConfigs": Array [
            Object {
              "adults": 1,
              "children": 0,
              "infants": 0,
              "passengers": Array [
                Object {
                  "age": null,
                  "dob": null,
                  "firstName": "Sean",
                  "lastName": "Conta",
                  "passengerType": "Adult",
                  "personId": "628199",
                },
              ],
              "roomType": "Double",
            },
          ],
          "paxList": Array [
            Object {
              "age": null,
              "dob": null,
              "firstName": "Sean",
              "lastName": "Conta",
              "passengerType": "Adult",
              "personId": "628199",
            },
          ],
          "quantity": 4,
          "serviceLineId": "745684",
          "startDate": "2025-08-13",
          "status": "OK",
          "supplierId": "SANLON",
          "supplierName": "Sanderson",
        },
      ],
      "totalPrice": "187795",
      "travelDate": "2025-08-13",
    },
  ],
}
`;

exports[`search tests availability tests should handle cancel policies correctly 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [],
      "agentPrice": 109800,
      "cancelHours": "",
      "cancelPolicies": Array [
        Object {
          "agentPrice": 97876,
          "cancelFee": 97876,
          "cancelNum": 72,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-03-29T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "72 hours prior to arrival - 10% cancellation fee",
        },
        Object {
          "agentPrice": 54900,
          "cancelFee": 54900,
          "cancelNum": 24,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-03-31T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "24 hours prior to arrival - 50% cancellation fee",
        },
        Object {
          "agentPrice": 109800,
          "cancelFee": 109800,
          "cancelNum": 0,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-04-01T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "No show or same day cancellation - 100% cancellation fee",
        },
      ],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [
        Object {
          "Address": "Airport Terminal 1, Darwin",
          "ExtPointInfo": "Drop at arrivals hall",
          "ExtPointName": "Airport Terminal",
          "MinutesPrior": 15,
        },
      ],
      "externalRateText": "Superior Room, 1 King Bed (Room Only)",
      "puInfoList": Array [
        Object {
          "address": "7 Kitchener Dr, Darwin",
          "minutesPrior": 30,
          "pointInfo": "Meet at hotel lobby",
          "pointName": "Adina/Vibe Waterfront",
        },
        Object {
          "address": "13 Shepherd St, Darwin (Front of Hotel)",
          "minutesPrior": 30,
          "pointInfo": "Additional pickup information",
          "pointName": "Argus Hotel",
        },
      ],
      "rateId": "$NZD9704dbc4eaf60700,4,DOUB,C5 A1INF KGB DOUB RONL",
      "startTimes": Array [
        Object {
          "startTime": "06:30",
        },
        Object {
          "startTime": "07:30",
        },
        Object {
          "startTime": "08:30",
        },
      ],
      "totalPrice": 109800,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 117200,
      "cancelHours": "",
      "cancelPolicies": Array [
        Object {
          "agentPrice": 104524,
          "cancelFee": 104524,
          "cancelNum": 48,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-03-30T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "48 hours prior to arrival - 10% cancellation fee",
        },
        Object {
          "agentPrice": 117200,
          "cancelFee": 117200,
          "cancelNum": 0,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-04-01T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "No show or same day cancellation - 100% cancellation fee",
        },
      ],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Accessible Superior Room, 1 King Bed (Breakfast)",
      "puInfoList": Array [],
      "rateId": "$NZD454c5fffb6a75a39,4,DOUB,C5 B1INF KGBH DOUB BRKF",
      "startTimes": Array [],
      "totalPrice": 117200,
    },
    Object {
      "additionalDetails": Array [],
      "agentPrice": 123600,
      "cancelHours": "",
      "cancelPolicies": Array [
        Object {
          "agentPrice": 110340,
          "cancelFee": 110340,
          "cancelNum": 96,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-03-28T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "96 hours prior to arrival - 10% cancellation fee",
        },
        Object {
          "agentPrice": 61800,
          "cancelFee": 61800,
          "cancelNum": 48,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-03-30T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "48 hours prior to arrival - 50% cancellation fee",
        },
        Object {
          "agentPrice": 123600,
          "cancelFee": 123600,
          "cancelNum": 0,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-04-01T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "No show or same day cancellation - 100% cancellation fee",
        },
      ],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Luxury Atrium View Room, 1 King Bed (Room Only)",
      "puInfoList": Array [],
      "rateId": "$NZDdf6f8ddcab337053,4,DOUB,C5 A1INF KGA DOUB RONL",
      "startTimes": Array [],
      "totalPrice": 123600,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests should handle external pickup, dropoff, and start times correctly 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [
        Object {
          "detailDescription": "Experience the best of our city with this comprehensive tour that includes convenient pickup and dropoff services. This full-day adventure takes you to all the must-see attractions while providing comfortable transportation throughout your journey.",
          "detailName": "FullDescription",
        },
        Object {
          "detailDescription": "8 hours",
          "detailName": "TourDuration",
        },
        Object {
          "detailDescription": "Your tour begins with pickup from your designated location. You'll visit the historic downtown area, explore the cultural district, enjoy lunch at a local restaurant, and conclude with dropoff at your preferred location. The tour includes professional guide services and all entrance fees.",
          "detailName": "Itinerary",
        },
      ],
      "agentPrice": 115450,
      "cancelHours": 24,
      "cancelPolicies": Array [
        Object {
          "penaltyDescription": "No refund for cancellations within 2 hours of tour start",
        },
        Object {
          "cancelNum": 2,
          "cancelTimeUnit": "Hour",
          "penaltyDescription": "50% refund for cancellations 2-24 hours before tour",
        },
        Object {
          "cancelNum": 24,
          "cancelTimeUnit": "Hour",
          "penaltyDescription": "Full refund for cancellations more than 24 hours before tour",
        },
      ],
      "currency": "USD",
      "currencyPrecision": 2,
      "doInfoList": Array [
        Object {
          "address": "Tourist Information Center, City Square",
          "minutesPrior": 15,
          "pointInfo": "Drop at main entrance",
          "pointName": "Tourist Center",
        },
        Object {
          "address": "456 Hotel Boulevard, Luxury District",
          "minutesPrior": 10,
          "pointInfo": "Drop at hotel entrance",
          "pointName": "Hotel District",
        },
      ],
      "externalRateText": "City Tour with Pickup and Dropoff (Full Day Tour)",
      "puInfoList": Array [
        Object {
          "address": "123 Main Street, Downtown",
          "minutesPrior": 30,
          "pointInfo": "Meet at hotel lobby entrance",
          "pointName": "Central Hotel",
        },
        Object {
          "address": "Airport Terminal 1, International Arrivals",
          "minutesPrior": 45,
          "pointInfo": "Look for guide with company sign",
          "pointName": "Airport Terminal",
        },
        Object {
          "address": "Central Station, Platform 3",
          "minutesPrior": 20,
          "pointInfo": "Meet at information desk",
          "pointName": "Train Station",
        },
      ],
      "rateId": "$USDtest123456789,4,DOUB,EXT TEST RATE",
      "startTimes": Array [
        Object {
          "startTime": "08:00",
        },
        Object {
          "startTime": "09:00",
        },
        Object {
          "startTime": "10:00",
        },
        Object {
          "startTime": "11:00",
        },
      ],
      "totalPrice": 150000,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests should handle multiple cancel policies under external rates correctly 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [
        Object {
          "detailDescription": "Experience the best of our city with this comprehensive full-day tour. Includes professional guide, transportation, and all entrance fees.",
          "detailName": "FullDescription",
        },
        Object {
          "detailDescription": "8 hours",
          "detailName": "TourDuration",
        },
        Object {
          "detailDescription": "Your tour begins with pickup from your hotel or designated location. Visit major landmarks, enjoy lunch at a local restaurant, and end with convenient drop-off.",
          "detailName": "Itinerary",
        },
      ],
      "agentPrice": 115450,
      "cancelHours": "",
      "cancelPolicies": Array [
        Object {
          "cancelNum": 24,
          "cancelTimeUnit": "Hour",
          "penaltyDescription": "Full refund for cancellations more than 24 hours before tour",
        },
        Object {
          "cancelNum": 2,
          "cancelTimeUnit": "Hour",
          "penaltyDescription": "50% refund for cancellations 2-24 hours before tour",
        },
        Object {
          "cancelNum": 0,
          "cancelTimeUnit": "Hour",
          "penaltyDescription": "No refund for cancellations within 2 hours of tour start",
        },
      ],
      "currency": "USD",
      "currencyPrecision": 2,
      "doInfoList": Array [
        Object {
          "address": "Tourist Information Center, City Square",
          "minutesPrior": 15,
          "pointInfo": "Drop at main entrance",
          "pointName": "Tourist Center",
        },
        Object {
          "address": "456 Hotel Boulevard, Luxury District",
          "minutesPrior": 10,
          "pointInfo": "Drop at hotel entrance",
          "pointName": "Hotel District",
        },
      ],
      "externalRateText": "City Tour with Pickup and Dropoff (Full Day Tour)",
      "puInfoList": Array [
        Object {
          "address": "123 Main Street, Downtown",
          "minutesPrior": 30,
          "pointInfo": "Meet at hotel lobby entrance",
          "pointName": "Central Hotel",
        },
        Object {
          "address": "Airport Terminal 1, International Arrivals",
          "minutesPrior": 45,
          "pointInfo": "Look for guide with company sign",
          "pointName": "Airport Terminal",
        },
        Object {
          "address": "Central Station, Platform 3",
          "minutesPrior": 20,
          "pointInfo": "Meet at information desk",
          "pointName": "Train Station",
        },
      ],
      "rateId": "$USDtest123456789,4,DOUB,EXT TEST RATE",
      "startTimes": Array [
        Object {
          "startTime": "08:00",
        },
        Object {
          "startTime": "09:00",
        },
        Object {
          "startTime": "10:00",
        },
        Object {
          "startTime": "11:00",
        },
      ],
      "totalPrice": 150000,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests should handle single cancel policy correctly 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [],
      "agentPrice": 109800,
      "cancelHours": "",
      "cancelPolicies": Array [
        Object {
          "agentPrice": 109800,
          "cancelFee": 27450,
          "cancelNum": 48,
          "cancelTimeUnit": "Hour",
          "deadlineDateTime": "2025-03-30T11:00:00Z",
          "inEffect": true,
          "penaltyDescription": "48 hours prior to arrival - 25% cancellation fee",
        },
      ],
      "currency": "NZD",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "Standard Room, 1 King Bed (Room Only)",
      "puInfoList": Array [],
      "rateId": "$NZD9704dbc4eaf60701,4,DOUB,SINGLE CANCEL POLICY TEST",
      "startTimes": Array [
        Object {
          "startTime": "06:00",
        },
        Object {
          "startTime": "07:00",
        },
        Object {
          "startTime": "08:00",
        },
      ],
      "totalPrice": 109800,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests should handle single cancel policy under external rates correctly 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [
        Object {
          "detailDescription": "4 hours",
          "detailName": "TourDuration",
        },
        Object {
          "detailDescription": "Visit major city landmarks and historical sites with professional guide.",
          "detailName": "Itinerary",
        },
      ],
      "agentPrice": 100000,
      "cancelHours": "",
      "cancelPolicies": Array [
        Object {
          "cancelNum": 20,
          "cancelTimeUnit": "Hour",
          "penaltyDescription": "No refund for cancellations within 2 hours of tour start",
        },
      ],
      "currency": "USD",
      "currencyPrecision": 2,
      "doInfoList": Array [
        Object {
          "Address": "Central Plaza, Downtown",
          "ExtPointInfo": "Drop at main square",
          "ExtPointName": "City Center",
          "MinutesPrior": 5,
        },
      ],
      "externalRateText": "Half Day City Tour (Half Day Tour)",
      "puInfoList": Array [
        Object {
          "Address": "100 Downtown Ave, City Center",
          "ExtPointInfo": "Meet at hotel entrance",
          "ExtPointName": "Downtown Hotel",
          "MinutesPrior": 15,
        },
      ],
      "rateId": "$USDsingletest789,4,DOUB,SINGLE EXT RATE",
      "startTimes": Array [
        Object {
          "startTime": "09:00",
        },
        Object {
          "startTime": "14:00",
        },
      ],
      "totalPrice": 120000,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests should modify paxconfigs and return availability 1`] = `
Object {
  "bookable": true,
  "rates": Array [
    Object {
      "additionalDetails": Array [],
      "agentPrice": 1083800,
      "cancelHours": 744,
      "cancelPolicies": Array [],
      "currency": "ZAR",
      "currencyPrecision": 2,
      "doInfoList": Array [],
      "externalRateText": "",
      "puInfoList": Array [],
      "rateId": "Default",
      "startTimes": Array [],
      "totalPrice": 1083800,
    },
  ],
  "type": "inventory",
}
`;

exports[`search tests availability tests should not modify paxconfigs and return not bookable 1`] = `
Object {
  "bookable": false,
  "message": "Maximum 2 pax allowed per Pax Config. Please update the Pax Config accordingly.",
  "rates": Array [],
  "type": "inventory",
}
`;

exports[`search tests availability tests should validate max pax per charge and return not bookable 1`] = `
Object {
  "bookable": false,
  "message": "Maximum 2 pax allowed per Pax Config. Please update the Pax Config accordingly.",
  "rates": Array [],
  "type": "inventory",
}
`;

exports[`search tests read allotment not empty 1`] = `
Object {
  "allotment": Array [
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "03/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "04/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "05/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "06/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "07/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "08/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "09/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "10/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "11/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "12/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "13/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "14/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "16/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "17/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "18/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "19/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "20/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "21/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "22/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "23/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "24/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "25/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "26/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "27/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "28/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "29/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "30/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "01/10/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/10/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "PP",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "03/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "04/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "05/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "06/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "07/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "08/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "09/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "10/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "11/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "12/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "13/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "14/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "16/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "17/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "18/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "19/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "20/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "21/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "22/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "23/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "24/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "25/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "26/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "27/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "28/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "29/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "30/09/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "01/10/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/10/2021",
      "description": "2021 Reboot Year",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
        "MAGLUX|QLDACMAGLUXKINSUI",
        "MAGLUX|SYDACMAGLUXGARDEN",
      ],
      "max": "7",
      "name": "2021 REBOOT",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "03/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "04/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "05/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "06/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "07/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "08/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "09/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "10/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "11/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "12/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "13/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "14/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "16/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "17/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "18/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "19/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "20/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "21/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "22/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "23/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "24/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "25/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "26/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "27/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "28/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "29/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "30/09/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "01/10/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/10/2021",
      "description": "Reboot 2021 Suppliers",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "REBOOT 2021",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "03/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "04/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "05/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "06/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "07/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "08/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "09/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "10/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "11/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "12/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "13/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "14/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "16/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "17/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "18/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "19/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "20/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "21/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "22/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "23/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "24/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "25/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "26/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "27/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "28/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "29/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "30/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "01/10/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/10/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "3",
      "name": "FREESALE",
      "release": "14",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "03/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "04/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "05/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "06/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "07/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "08/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "09/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "10/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "11/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "12/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "13/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "14/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "16/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "17/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "18/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "19/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "20/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "21/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "22/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "23/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "24/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "25/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "26/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "27/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "28/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "29/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "30/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "7",
      "name": "2021 RESPAWN",
      "release": "4",
      "request": true,
      "splitCode": "GENERAL",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "02/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "03/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "04/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "05/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "06/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "07/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "08/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "09/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "10/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "11/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "12/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "13/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "14/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "16/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "17/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "18/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "19/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "20/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "21/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "22/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "23/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "24/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "25/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "26/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "27/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "28/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "29/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "30/09/2021",
      "description": "",
      "keyPaths": Array [
        "MAGLUX|QLDACMAGLUXDELSUI",
      ],
      "max": "6",
      "name": "2021 RESPAWN",
      "release": "3",
      "request": true,
      "splitCode": "SINGTRAV",
      "unitType": "RM",
    },
  ],
}
`;

exports[`search tests read allotment that applies to more products 1`] = `
Object {
  "allotment": Array [
    Object {
      "appliesTo": "Product",
      "booked": "0",
      "date": "15/06/2022",
      "description": "Deluxe Room",
      "keyPaths": Array [
        "XXYYIN|SINACXXYYINDLXFBF",
        "XXYYIN|SINACXXYYIN2SDXBF",
      ],
      "max": "0",
      "name": "DLX_XXXXX",
      "release": "7",
      "request": false,
      "splitCode": "ALLAGENT",
      "unitType": "RO",
    },
  ],
}
`;

exports[`search tests searchProductsForItinerary 1`] = `
Object {
  "productFields": Array [],
  "products": Array [
    Object {
      "address": "377 Fulham Palace Road, ,  London, United Kingdom, ",
      "description": null,
      "options": Array [
        Object {
          "comment": "FIT- V- Class (1-5 Pax)",
          "extras": Array [],
          "lastUpdateTimestamp": 1700750093,
          "optionId": "LONTRDAVIDSHDWBVC",
          "optionName": "Half-Day Warner Bros Studios (6-Hours)-FIT- V- Class (1-5 Pax)",
          "restrictions": Object {
            "Adult": Object {
              "allowed": true,
              "maxAge": 999,
              "minAge": 16,
            },
            "Child": Object {
              "allowed": true,
              "maxAge": 15,
              "minAge": 5,
            },
            "Double": Object {
              "allowed": false,
              "maxAdults": null,
              "maxPax": null,
            },
            "Infant": Object {
              "allowed": true,
              "maxAge": 4,
              "minAge": 0,
            },
            "Quad": Object {
              "allowed": false,
              "maxAdults": null,
              "maxPax": null,
            },
            "Single": Object {
              "allowed": false,
              "maxAdults": null,
              "maxPax": null,
            },
            "Triple": Object {
              "allowed": false,
              "maxAdults": null,
              "maxPax": null,
            },
            "Twin": Object {
              "allowed": false,
              "maxAdults": null,
              "maxPax": null,
            },
            "roomTypeRequired": false,
          },
          "serviceType": "Transfers",
          "units": Array [
            Object {
              "restrictions": Object {
                "allowed": null,
                "maxAdults": null,
                "maxAge": 999,
                "maxPax": null,
                "minAge": 16,
              },
              "unitId": "Adults",
              "unitName": "Adults",
            },
            Object {
              "restrictions": Object {
                "allowed": null,
                "maxAdults": null,
                "maxAge": 15,
                "maxPax": null,
                "minAge": 5,
              },
              "unitId": "Children",
              "unitName": "Children",
            },
            Object {
              "restrictions": Object {
                "allowed": null,
                "maxAdults": null,
                "maxAge": 4,
                "maxPax": null,
                "minAge": 0,
              },
              "unitId": "Infants",
              "unitName": "Infants",
            },
          ],
        },
      ],
      "productId": "6489",
      "productName": "Davids of London Ltd",
      "serviceTypes": Array [
        "Transfers",
      ],
    },
  ],
}
`;
